@@ -7,13 +7,12 @@
 package org.elasticsearch.xpack.security.authc.jwt;
 
 import com.nimbusds.jose.JOSEObjectType;
+import com.nimbusds.jose.JWSAlgorithm;
 import com.nimbusds.jose.jwk.JWK;
 import com.nimbusds.jose.jwk.OctetSequenceKey;
 import com.nimbusds.jose.jwk.RSAKey;
 import com.nimbusds.jwt.SignedJWT;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.settings.MockSecureSettings;
 import org.elasticsearch.common.settings.SecureString;
@@ -39,16 +38,11 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.is;
-
 /**
  * Generate verified JWT configurations for integration tests or documentation.
  */
 public class JwtRealmGenerateTests extends JwtRealmTestCase {
-    private static final Logger LOGGER = LogManager.getLogger(JwtRealmGenerateTests.class);
-
-    private static final MinMax JWT_AUTHC_RANGE_1 = new MinMax(1, 1);
+    private static final int JWT_AUTHC_REPEATS_1 = 1;
     private static final Date DATE_2000_1_1 = Date.from(ZonedDateTime.of(2000, 1, 1, 0, 0, 0, 0, ZoneOffset.UTC).toInstant());
     private static final Date DATE_2099_1_1 = Date.from(ZonedDateTime.of(2099, 1, 1, 0, 0, 0, 0, ZoneOffset.UTC).toInstant());
 
@@ -64,28 +58,31 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
             new OctetSequenceKey.Builder(hmacKeyOidcString.getBytes(StandardCharsets.UTF_8)).build()
         );
 
+        final String principalClaimName = "sub";
+
         // Create issuer
         final JwtIssuer jwtIssuer = new JwtIssuer(
             "iss8", // iss
             List.of("aud8"), // aud
-            Collections.emptyList(), // algJwkPairsPkc
-            Collections.emptyList(), // algJwkPairsHmac
-            algJwkPairHmac, // algJwkPairHmac
             Collections.singletonMap("security_test_user", new User("security_test_user", "security_test_role")), // users
             false // createHttpsServer
         );
+        jwtIssuer.setJwks(List.of(algJwkPairHmac), true);
 
         // Create realm settings
         final String realmName = "jwt8";
         final Settings.Builder configBuilder = Settings.builder()
-            .put(this.globalSettings)
-            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_ISSUER), jwtIssuer.issuer)
-            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_AUDIENCES), String.join(",", jwtIssuer.audiences))
+            .put(globalSettings)
+            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_ISSUER), jwtIssuer.issuerClaimValue)
+            .put(
+                RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_AUDIENCES),
+                String.join(",", jwtIssuer.audiencesClaimValue)
+            )
             .put(
                 RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_SIGNATURE_ALGORITHMS),
                 String.join(",", jwtIssuer.algorithmsAll)
             )
-            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_PRINCIPAL.getClaim()), "sub")
+            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_PRINCIPAL.getClaim()), principalClaimName)
             .put(
                 RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLIENT_AUTHENTICATION_TYPE),
                 JwtRealmSettings.ClientAuthenticationType.SHARED_SECRET.value()
@@ -102,27 +99,29 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
         configBuilder.setSecureSettings(secureSettings);
 
         // Create realm
-        final RealmConfig config = super.buildRealmConfig(JwtRealmSettings.TYPE, realmName, configBuilder.build(), 8);
+        final RealmConfig config = buildRealmConfig(JwtRealmSettings.TYPE, realmName, configBuilder.build(), 8);
         final SSLService sslService = new SSLService(TestEnvironment.newEnvironment(configBuilder.build()));
-        final UserRoleMapper userRoleMapper = super.buildRoleMapper(jwtIssuer.users);
+        final UserRoleMapper userRoleMapper = buildRoleMapper(jwtIssuer.principals);
         final JwtRealm jwtRealm = new JwtRealm(config, sslService, userRoleMapper);
-        jwtRealm.initialize(Collections.singletonList(jwtRealm), super.licenseState);
-        final JwtRealmNameAndSettingsBuilder realmNameAndSettingsBuilder = new JwtRealmNameAndSettingsBuilder(realmName, configBuilder);
-        final JwtIssuerAndRealm jwtIssuerAndRealm = new JwtIssuerAndRealm(jwtIssuer, jwtRealm, realmNameAndSettingsBuilder);
-        super.jwtIssuerAndRealms = Collections.singletonList(jwtIssuerAndRealm); // super.shutdown() closes issuer+realm if necessary
+        jwtRealm.initialize(Collections.singletonList(jwtRealm), licenseState);
+        final JwtRealmSettingsBuilder jwtRealmSettingsBuilder = new JwtRealmSettingsBuilder(realmName, configBuilder);
+        final JwtIssuerAndRealm jwtIssuerAndRealm = new JwtIssuerAndRealm(jwtIssuer, jwtRealm, jwtRealmSettingsBuilder);
+        jwtIssuerAndRealms = Collections.singletonList(jwtIssuerAndRealm); // shutdown() closes issuer+realm if necessary
+        printJwtRealmAndIssuer(jwtIssuerAndRealm);
 
         // Create JWT
-        final User user = this.randomUser(jwtIssuerAndRealm.issuer());
+        final User user = randomUser(jwtIssuerAndRealm.issuer());
         final SignedJWT unsignedJwt = JwtTestCase.buildUnsignedJwt(
-            randomBoolean() ? null : JOSEObjectType.JWT.toString(),
+            randomBoolean() ? null : JOSEObjectType.JWT.toString(), // kty
+            randomBoolean() ? null : algJwkPairHmac.jwk().getKeyID(), // kid
             algJwkPairHmac.alg(), // alg
             null, // jwtID
-            jwtIssuerAndRealm.realm().allowedIssuer, // iss
-            jwtIssuerAndRealm.realm().allowedAudiences, // aud
-            user.principal(), // sub
-            jwtIssuerAndRealm.realm().claimParserPrincipal.getClaimName(), // principal claim name
+            JwtRealmInspector.getAllowedIssuer(jwtIssuerAndRealm.realm()), // iss
+            JwtRealmInspector.getAllowedAudiences(jwtIssuerAndRealm.realm()), // aud
+            user.principal(), // sub claim value
+            JwtRealmInspector.getPrincipalClaimName(jwtIssuerAndRealm.realm()), // principal claim name
             user.principal(), // principal claim value
-            jwtIssuerAndRealm.realm().claimParserGroups.getClaimName(), // group claim name
+            JwtRealmInspector.getGroupsClaimName(jwtIssuerAndRealm.realm()), // group claim name
             List.of("security_test_role"), // group claim value
             null, // auth_time
             DATE_2000_1_1, // iat
@@ -131,12 +130,11 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
             null, // nonce
             Collections.emptyMap() // other claims
         );
-        final SecureString jwt = JwtValidateUtil.signJwt(algJwkPairHmac.jwk(), unsignedJwt);
-        assertThat(JwtValidateUtil.verifyJwt(algJwkPairHmac.jwk(), SignedJWT.parse(jwt.toString())), is(equalTo(true)));
+        final SecureString jwt = signJwt(algJwkPairHmac.jwk(), unsignedJwt);
 
         // Verify authc+authz, then print all artifacts
-        super.multipleRealmsAuthenticateJwtHelper(jwtIssuerAndRealm.realm(), user, jwt, clientSecret, JWT_AUTHC_RANGE_1);
-        this.printArtifacts(jwtIssuer, config, clientSecret, jwt);
+        doMultipleAuthcAuthzAndVerifySuccess(jwtIssuerAndRealm.realm(), user, jwt, clientSecret, JWT_AUTHC_REPEATS_1);
+        printArtifacts(jwtIssuer, config, clientSecret, jwt);
     }
 
     /**
@@ -145,31 +143,34 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
      */
     public void testCreateJwtIntegrationTestRealm1() throws Exception {
         // Create RSA key for algorithm RS256
-        final JWK jwk = new RSAKey.Builder((RSAKey) JwtTestCase.randomJwk("RS256")).keyID("test-rsa-key").build();
+        final JWK jwk = new RSAKey.Builder(JwtTestCase.randomJwkRsa(JWSAlgorithm.RS256)).keyID("test-rsa-key").build();
         final JwtIssuer.AlgJwkPair algJwkPairPkc = new JwtIssuer.AlgJwkPair("RS256", jwk);
+
+        final String principalClaimName = "sub";
 
         // Create issuer
         final JwtIssuer jwtIssuer = new JwtIssuer(
-            "https://issuer.example.com/", // iss
-            List.of("https://audience.example.com/"), // aud
-            List.of(algJwkPairPkc), // algJwkPairsPkc
-            Collections.emptyList(), // algJwkPairsHmac
-            null, // algJwkPairHmac
+            "https://issuer.example.com/", // iss claim value
+            List.of("https://audience.example.com/"), // aud claim value
             Collections.singletonMap("user1", new User("user1", "role1")), // users
             false // createHttpsServer
         );
+        jwtIssuer.setJwks(List.of(algJwkPairPkc), false);
 
         // Create realm settings (no secure settings)
         final String realmName = "jwt1";
         final Settings.Builder configBuilder = Settings.builder()
-            .put(this.globalSettings)
-            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_ISSUER), jwtIssuer.issuer)
-            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_AUDIENCES), String.join(",", jwtIssuer.audiences))
+            .put(globalSettings)
+            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_ISSUER), jwtIssuer.issuerClaimValue)
+            .put(
+                RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_AUDIENCES),
+                String.join(",", jwtIssuer.audiencesClaimValue)
+            )
             .put(
                 RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_SIGNATURE_ALGORITHMS),
                 String.join(",", jwtIssuer.algorithmsAll)
             )
-            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_PRINCIPAL.getClaim()), "sub")
+            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_PRINCIPAL.getClaim()), principalClaimName)
             .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_GROUPS.getClaim()), "roles")
             .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_DN.getClaim()), "dn")
             .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_NAME.getClaim()), "name")
@@ -180,31 +181,33 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
             )
             .put(
                 RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.PKC_JWKSET_PATH),
-                super.saveToTempFile("jwkset.", ".json", jwtIssuer.encodedJwkSetPkcPublic.getBytes(StandardCharsets.UTF_8))
+                saveToTempFile("jwkset.", ".json", jwtIssuer.encodedJwkSetPkcPublic)
             );
 
         // Create realm
-        final RealmConfig config = super.buildRealmConfig(JwtRealmSettings.TYPE, realmName, configBuilder.build(), 2);
+        final RealmConfig config = buildRealmConfig(JwtRealmSettings.TYPE, realmName, configBuilder.build(), 2);
         final SSLService sslService = new SSLService(TestEnvironment.newEnvironment(configBuilder.build()));
-        final UserRoleMapper userRoleMapper = super.buildRoleMapper(jwtIssuer.users);
+        final UserRoleMapper userRoleMapper = buildRoleMapper(jwtIssuer.principals);
         final JwtRealm jwtRealm = new JwtRealm(config, sslService, userRoleMapper);
-        jwtRealm.initialize(Collections.singletonList(jwtRealm), super.licenseState);
-        final JwtRealmNameAndSettingsBuilder realmNameAndSettingsBuilder = new JwtRealmNameAndSettingsBuilder(realmName, configBuilder);
-        final JwtIssuerAndRealm jwtIssuerAndRealm = new JwtIssuerAndRealm(jwtIssuer, jwtRealm, realmNameAndSettingsBuilder);
-        super.jwtIssuerAndRealms = Collections.singletonList(jwtIssuerAndRealm); // super.shutdown() closes issuer+realm if necessary
+        jwtRealm.initialize(Collections.singletonList(jwtRealm), licenseState);
+        final JwtRealmSettingsBuilder jwtRealmSettingsBuilder = new JwtRealmSettingsBuilder(realmName, configBuilder);
+        final JwtIssuerAndRealm jwtIssuerAndRealm = new JwtIssuerAndRealm(jwtIssuer, jwtRealm, jwtRealmSettingsBuilder);
+        jwtIssuerAndRealms = Collections.singletonList(jwtIssuerAndRealm); // shutdown() closes issuer+realm if necessary
+        printJwtRealmAndIssuer(jwtIssuerAndRealm);
 
         // Create JWT
-        final User user = this.randomUser(jwtIssuerAndRealm.issuer());
+        final User user = randomUser(jwtIssuerAndRealm.issuer());
         final SignedJWT unsignedJwt = JwtTestCase.buildUnsignedJwt(
-            randomBoolean() ? null : JOSEObjectType.JWT.toString(),
+            randomBoolean() ? null : JOSEObjectType.JWT.toString(), // kty
+            randomBoolean() ? null : algJwkPairPkc.jwk().getKeyID(), // kid
             algJwkPairPkc.alg(), // alg
             null, // jwtID
-            jwtIssuerAndRealm.realm().allowedIssuer, // iss
-            jwtIssuerAndRealm.realm().allowedAudiences, // aud
+            JwtRealmInspector.getAllowedIssuer(jwtIssuerAndRealm.realm()), // iss
+            JwtRealmInspector.getAllowedAudiences(jwtIssuerAndRealm.realm()), // aud
             user.principal(), // sub
-            jwtIssuerAndRealm.realm().claimParserPrincipal.getClaimName(), // principal claim name
+            JwtRealmInspector.getPrincipalClaimName(jwtIssuerAndRealm.realm()), // principal claim name
             user.principal(), // principal claim value
-            jwtIssuerAndRealm.realm().claimParserGroups.getClaimName(), // group claim name
+            JwtRealmInspector.getGroupsClaimName(jwtIssuerAndRealm.realm()), // group claim name
             null, // group claim value
             null, // auth_time
             DATE_2000_1_1, // iat
@@ -213,12 +216,11 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
             null, // nonce
             Collections.emptyMap() // other claims
         );
-        final SecureString jwt = JwtValidateUtil.signJwt(algJwkPairPkc.jwk(), unsignedJwt);
-        assertThat(JwtValidateUtil.verifyJwt(algJwkPairPkc.jwk(), SignedJWT.parse(jwt.toString())), is(equalTo(true)));
+        final SecureString jwt = signJwt(algJwkPairPkc.jwk(), unsignedJwt);
 
         // Verify authc+authz, then print all artifacts
-        super.multipleRealmsAuthenticateJwtHelper(jwtIssuerAndRealm.realm(), user, jwt, null, JWT_AUTHC_RANGE_1);
-        this.printArtifacts(jwtIssuer, config, null, jwt);
+        doMultipleAuthcAuthzAndVerifySuccess(jwtIssuerAndRealm.realm(), user, jwt, null, JWT_AUTHC_REPEATS_1);
+        printArtifacts(jwtIssuer, config, null, jwt);
     }
 
     /**
@@ -233,26 +235,29 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
             new OctetSequenceKey.Builder(hmacKeyOidcString.getBytes(StandardCharsets.UTF_8)).build()
         );
 
+        final String principalClaimName = "email";
+
         // Create issuer
         final JwtIssuer jwtIssuer = new JwtIssuer(
-            "my-issuer", // iss
-            List.of("es01", "es02", "es03"), // aud
-            Collections.emptyList(), // algJwkPairsPkc
-            Collections.emptyList(), // algJwkPairsHmac
-            algJwkPairHmac, // algJwkPairHmac
+            "my-issuer", // iss claim value
+            List.of("es01", "es02", "es03"), // aud claim value
             Collections.singletonMap("user2", new User("user2", "role2")), // users
             false // createHttpsServer
         );
+        jwtIssuer.setJwks(List.of(algJwkPairHmac), true);
 
         // Create realm settings
         final String realmName = "jwt2";
         final String authzRealmName = "lookup_native";
         final Settings.Builder configBuilder = Settings.builder()
-            .put(this.globalSettings)
-            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_ISSUER), jwtIssuer.issuer)
-            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_AUDIENCES), String.join(",", jwtIssuer.audiences))
+            .put(globalSettings)
+            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_ISSUER), jwtIssuer.issuerClaimValue)
+            .put(
+                RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_AUDIENCES),
+                String.join(",", jwtIssuer.audiencesClaimValue)
+            )
             .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_SIGNATURE_ALGORITHMS), "HS256,HS384")
-            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_PRINCIPAL.getClaim()), "email")
+            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_PRINCIPAL.getClaim()), principalClaimName)
             .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_PRINCIPAL.getPattern()), "^(.*)@[^.]*[.]example[.]com$")
             .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_MAIL.getClaim()), "email")
             .put(
@@ -275,32 +280,34 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
         configBuilder.setSecureSettings(secureSettings);
 
         // Create authz realm
-        final RealmConfig authzConfig = this.buildRealmConfig("native", authzRealmName, Settings.EMPTY, 0);
+        final RealmConfig authzConfig = buildRealmConfig("native", authzRealmName, Settings.EMPTY, 0);
         final MockLookupRealm authzRealm = new MockLookupRealm(authzConfig);
-        jwtIssuer.users.values().forEach(authzRealm::registerUser); // authz realm will do roles lookup
+        jwtIssuer.principals.values().forEach(authzRealm::registerUser); // authz realm will do roles lookup
 
         // Create realm
-        final RealmConfig config = super.buildRealmConfig(JwtRealmSettings.TYPE, realmName, configBuilder.build(), 3);
+        final RealmConfig config = buildRealmConfig(JwtRealmSettings.TYPE, realmName, configBuilder.build(), 3);
         final SSLService sslService = new SSLService(TestEnvironment.newEnvironment(configBuilder.build()));
-        final UserRoleMapper userRoleMapper = super.buildRoleMapper(Map.of()); // authc realm will not do role mapping
+        final UserRoleMapper userRoleMapper = buildRoleMapper(Map.of()); // authc realm will not do role mapping
         final JwtRealm jwtRealm = new JwtRealm(config, sslService, userRoleMapper);
-        jwtRealm.initialize(List.of(authzRealm, jwtRealm), super.licenseState);
-        final JwtRealmNameAndSettingsBuilder realmNameAndSettingsBuilder = new JwtRealmNameAndSettingsBuilder(realmName, configBuilder);
-        final JwtIssuerAndRealm jwtIssuerAndRealm = new JwtIssuerAndRealm(jwtIssuer, jwtRealm, realmNameAndSettingsBuilder);
-        super.jwtIssuerAndRealms = Collections.singletonList(jwtIssuerAndRealm); // super.shutdown() closes issuer+realm if necessary
+        jwtRealm.initialize(List.of(authzRealm, jwtRealm), licenseState);
+        final JwtRealmSettingsBuilder jwtRealmSettingsBuilder = new JwtRealmSettingsBuilder(realmName, configBuilder);
+        final JwtIssuerAndRealm jwtIssuerAndRealm = new JwtIssuerAndRealm(jwtIssuer, jwtRealm, jwtRealmSettingsBuilder);
+        jwtIssuerAndRealms = Collections.singletonList(jwtIssuerAndRealm); // shutdown() closes issuer+realm if necessary
+        printJwtRealmAndIssuer(jwtIssuerAndRealm);
 
         // Create JWT
-        final User user = this.randomUser(jwtIssuerAndRealm.issuer());
+        final User user = randomUser(jwtIssuerAndRealm.issuer());
         final SignedJWT unsignedJwt = JwtTestCase.buildUnsignedJwt(
-            JOSEObjectType.JWT.toString(),
+            randomBoolean() ? null : JOSEObjectType.JWT.toString(), // kty
+            randomBoolean() ? null : algJwkPairHmac.jwk().getKeyID(), // kid
             algJwkPairHmac.alg(), // alg
             null, // jwtID
-            jwtIssuerAndRealm.realm().allowedIssuer, // iss
-            jwtIssuerAndRealm.realm().allowedAudiences, // aud
-            user.principal(), // sub
-            jwtIssuerAndRealm.realm().claimParserPrincipal.getClaimName(), // principal claim name
+            JwtRealmInspector.getAllowedIssuer(jwtIssuerAndRealm.realm()), // iss
+            JwtRealmInspector.getAllowedAudiences(jwtIssuerAndRealm.realm()), // aud
+            user.principal(), // sub claim value
+            JwtRealmInspector.getPrincipalClaimName(jwtIssuerAndRealm.realm()), // principal claim name
             "user2@something.example.com", // principal claim value
-            jwtIssuerAndRealm.realm().claimParserGroups.getClaimName(), // group claim name
+            JwtRealmInspector.getGroupsClaimName(jwtIssuerAndRealm.realm()), // group claim name
             null, // group claim value
             null, // auth_time
             DATE_2000_1_1, // iat
@@ -309,12 +316,11 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
             null, // nonce
             Collections.emptyMap() // other claims
         );
-        final SecureString jwt = JwtValidateUtil.signJwt(algJwkPairHmac.jwk(), unsignedJwt);
-        assertThat(JwtValidateUtil.verifyJwt(algJwkPairHmac.jwk(), SignedJWT.parse(jwt.toString())), is(equalTo(true)));
+        final SecureString jwt = signJwt(algJwkPairHmac.jwk(), unsignedJwt);
 
         // Verify authc+authz, then print all artifacts
-        super.multipleRealmsAuthenticateJwtHelper(jwtIssuerAndRealm.realm(), user, jwt, clientSecret, JWT_AUTHC_RANGE_1);
-        this.printArtifacts(jwtIssuer, config, clientSecret, jwt);
+        doMultipleAuthcAuthzAndVerifySuccess(jwtIssuerAndRealm.realm(), user, jwt, clientSecret, JWT_AUTHC_REPEATS_1);
+        printArtifacts(jwtIssuer, config, clientSecret, jwt);
     }
 
     /**
@@ -327,26 +333,28 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
             new JwtIssuer.AlgJwkPair("HS384", new OctetSequenceKey.Builder(randomByteArrayOfLength(48)).keyID("test-hmac-384").build()),
             new JwtIssuer.AlgJwkPair("HS512", new OctetSequenceKey.Builder(randomByteArrayOfLength(64)).keyID("test-hmac-512").build())
         );
-        var selectedHmac = randomFrom(hmacKeys);
+
+        final String principalClaimName = "sub";
 
         // Create issuer
         final JwtIssuer jwtIssuer = new JwtIssuer(
-            "jwt3-issuer", // iss
-            List.of("jwt3-audience"), // aud
-            Collections.emptyList(), // algJwkPairsPkc
-            hmacKeys, // algJwkPairsHmac
-            null, // algJwkPairHmac
+            "jwt3-issuer", // iss claim value
+            List.of("jwt3-audience"), // aud claim value
             Collections.singletonMap("user3", new User("user3", "role3")), // users
             false // createHttpsServer
         );
+        jwtIssuer.setJwks(hmacKeys, false);
 
         // Create realm settings
         final String realmName = "jwt3";
         final Settings.Builder configBuilder = Settings.builder()
-            .put(this.globalSettings)
-            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_ISSUER), jwtIssuer.issuer)
-            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_AUDIENCES), String.join(",", jwtIssuer.audiences))
-            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_PRINCIPAL.getClaim()), "sub")
+            .put(globalSettings)
+            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_ISSUER), jwtIssuer.issuerClaimValue)
+            .put(
+                RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_AUDIENCES),
+                String.join(",", jwtIssuer.audiencesClaimValue)
+            )
+            .put(RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.CLAIMS_PRINCIPAL.getClaim()), principalClaimName)
             .put(
                 RealmSettings.getFullSettingKey(realmName, JwtRealmSettings.ALLOWED_SIGNATURE_ALGORITHMS),
                 String.join(",", jwtIssuer.algorithmsAll)
@@ -367,27 +375,30 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
         configBuilder.setSecureSettings(secureSettings);
 
         // Create realm
-        final RealmConfig config = super.buildRealmConfig(JwtRealmSettings.TYPE, realmName, configBuilder.build(), 4);
+        final RealmConfig config = buildRealmConfig(JwtRealmSettings.TYPE, realmName, configBuilder.build(), 4);
         final SSLService sslService = new SSLService(TestEnvironment.newEnvironment(configBuilder.build()));
-        final UserRoleMapper userRoleMapper = super.buildRoleMapper(jwtIssuer.users);
+        final UserRoleMapper userRoleMapper = buildRoleMapper(jwtIssuer.principals);
         final JwtRealm jwtRealm = new JwtRealm(config, sslService, userRoleMapper);
-        jwtRealm.initialize(List.of(jwtRealm), super.licenseState);
-        final JwtRealmNameAndSettingsBuilder realmNameAndSettingsBuilder = new JwtRealmNameAndSettingsBuilder(realmName, configBuilder);
-        final JwtIssuerAndRealm jwtIssuerAndRealm = new JwtIssuerAndRealm(jwtIssuer, jwtRealm, realmNameAndSettingsBuilder);
-        super.jwtIssuerAndRealms = Collections.singletonList(jwtIssuerAndRealm); // super.shutdown() closes issuer+realm if necessary
+        jwtRealm.initialize(List.of(jwtRealm), licenseState);
+        final JwtRealmSettingsBuilder jwtRealmSettingsBuilder = new JwtRealmSettingsBuilder(realmName, configBuilder);
+        final JwtIssuerAndRealm jwtIssuerAndRealm = new JwtIssuerAndRealm(jwtIssuer, jwtRealm, jwtRealmSettingsBuilder);
+        jwtIssuerAndRealms = Collections.singletonList(jwtIssuerAndRealm); // shutdown() closes issuer+realm if necessary
+        printJwtRealmAndIssuer(jwtIssuerAndRealm);
 
         // Create JWT
-        final User user = this.randomUser(jwtIssuerAndRealm.issuer());
+        final JwtIssuer.AlgJwkPair selectedHmac = randomFrom(hmacKeys);
+        final User user = randomUser(jwtIssuerAndRealm.issuer());
         final SignedJWT unsignedJwt = JwtTestCase.buildUnsignedJwt(
-            JOSEObjectType.JWT.toString(),
+            randomBoolean() ? null : JOSEObjectType.JWT.toString(), // kty
+            randomBoolean() ? null : selectedHmac.jwk().getKeyID(), // kid
             selectedHmac.alg(), // alg
             null, // jwtID
-            jwtIssuerAndRealm.realm().allowedIssuer, // iss
-            jwtIssuerAndRealm.realm().allowedAudiences, // aud
-            user.principal(), // sub
-            jwtIssuerAndRealm.realm().claimParserPrincipal.getClaimName(), // principal claim name
-            randomFrom(jwtIssuer.users.keySet()), // principal claim value
-            jwtIssuerAndRealm.realm().claimParserGroups.getClaimName(), // group claim name
+            JwtRealmInspector.getAllowedIssuer(jwtIssuerAndRealm.realm()), // iss
+            JwtRealmInspector.getAllowedAudiences(jwtIssuerAndRealm.realm()), // aud
+            user.principal(), // sub claim value
+            JwtRealmInspector.getPrincipalClaimName(jwtIssuerAndRealm.realm()), // principal claim name
+            randomFrom(jwtIssuer.principals.keySet()), // principal claim value
+            JwtRealmInspector.getGroupsClaimName(jwtIssuerAndRealm.realm()), // group claim name
             null, // group claim value
             null, // auth_time
             DATE_2000_1_1, // iat
@@ -396,12 +407,11 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
             null, // nonce
             Collections.emptyMap() // other claims
         );
-        final SecureString jwt = JwtValidateUtil.signJwt(selectedHmac.jwk(), unsignedJwt);
-        assertThat(JwtValidateUtil.verifyJwt(selectedHmac.jwk(), SignedJWT.parse(jwt.toString())), is(equalTo(true)));
+        final SecureString jwt = signJwt(selectedHmac.jwk(), unsignedJwt);
 
         // Verify authc+authz, then print all artifacts
-        super.multipleRealmsAuthenticateJwtHelper(jwtIssuerAndRealm.realm(), user, jwt, clientSecret, JWT_AUTHC_RANGE_1);
-        this.printArtifacts(jwtIssuer, config, clientSecret, jwt);
+        doMultipleAuthcAuthzAndVerifySuccess(jwtIssuerAndRealm.realm(), user, jwt, clientSecret, JWT_AUTHC_REPEATS_1);
+        printArtifacts(jwtIssuer, config, clientSecret, jwt);
     }
 
     private void printArtifacts(
@@ -411,11 +421,18 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
         final SecureString jwt
     ) throws Exception {
         final SignedJWT signedJwt = SignedJWT.parse(jwt.toString());
-        LOGGER.info(
+        logger.info(
             JwtRealmGenerateTests.printIssuerSettings(jwtIssuer)
                 + JwtRealmGenerateTests.printRealmSettings(config)
                 + "\n===\nRequest Headers\n===\n"
-                + (Strings.hasText(clientSecret) ? JwtRealm.HEADER_CLIENT_AUTHENTICATION + ": " + clientSecret + "\n" : "")
+                + (Strings.hasText(clientSecret)
+                    ? JwtRealm.HEADER_CLIENT_AUTHENTICATION
+                        + ": "
+                        + JwtRealm.HEADER_SHARED_SECRET_AUTHENTICATION_SCHEME
+                        + " "
+                        + clientSecret
+                        + "\n"
+                    : "")
                 + JwtRealm.HEADER_END_USER_AUTHENTICATION
                 + ": "
                 + jwt
@@ -431,11 +448,11 @@ public class JwtRealmGenerateTests extends JwtRealmTestCase {
 
     private static String printIssuerSettings(final JwtIssuer jwtIssuer) {
         final StringBuilder sb = new StringBuilder("\n===\nIssuer settings\n===\n");
-        sb.append("Issuer: ").append(jwtIssuer.issuer).append('\n');
-        sb.append("Audiences: ").append(String.join(",", jwtIssuer.audiences)).append('\n');
+        sb.append("Issuer: ").append(jwtIssuer.issuerClaimValue).append('\n');
+        sb.append("Audiences: ").append(String.join(",", jwtIssuer.audiencesClaimValue)).append('\n');
         sb.append("Algorithms: ").append(String.join(",", jwtIssuer.algorithmsAll)).append("\n");
         if (jwtIssuer.algAndJwksPkc.isEmpty() == false) {
-            sb.append("PKC JWKSet (Private): ").append(jwtIssuer.encodedJwkSetPkcPrivate).append("\n");
+            sb.append("PKC JWKSet (Private): ").append(jwtIssuer.encodedJwkSetPkcPublicPrivate).append("\n");
             sb.append("PKC JWKSet (Public): ").append(jwtIssuer.encodedJwkSetPkcPublic).append("\n");
         }
         if (jwtIssuer.algAndJwksHmac.isEmpty() == false) {
